--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,9 @@
-# Ignorar tudo
+# Ignora tudo
 *
 
-# Mas manter estes arquivos
-!enso.r
-!install.r
-!analise_gfw_enso_4wings.r
-!eventos_pesca_zee_oni.r
-!.gitignore
+# Mas mantém:
+!*.R
 !README.md
+!.gitignore
+!results/
+!results/*.png
